--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^1.9.7",
     "vuepress": "^2.0.0-beta.36"
   }
 }
